# cvec

./: .gitignore  LICENSE  README.md
inc/: cvec.h  platform.h
inc/arch/arm/: cvec_arm_128b.h
inc/arch/arm/impl/: cvec_aarch32_armv7_neon_impl.h  cvec_aarch64_armv8_neon_impl.h
inc/arch/x86/: cvec_x86_128b.h  cvec_x86_256b.h
inc/arch/x86/impl/: cvec_avx2_impl.h  cvec_avx_impl.h  cvec_sse2_impl.h  cvec_sse4_1_impl.h  cvec_sse4_2_impl.h  cvec_sse_impl.h  cvec_ssse3_impl.h
inc/arch/x86_64/: cvec_x86_128b.h  cvec_x86_256b.h
inc/arch/x86_64/impl/: cvec_avx2_impl.h  cvec_avx_impl.h
test/: CMakeLists.txt  Makefile  test_avx2.c
test/avx/: CMakeLists.txt
test/avx/src/: test_avx.c
test/avx2/: CMakeLists.txt
test/avx2/src/: test_avx2.c
test/inc/: test_helpers.h
test/sse/: CMakeLists.txt
test/sse/src/: test_sse.c
test/sse2/: CMakeLists.txt
test/sse2/src/: test_sse2.c
test/x86/: CMakeLists.txt
test/x86/avx/: CMakeLists.txt
test/x86/avx/src/: test_avx.c
test/x86/avx2/: CMakeLists.txt
test/x86/scripts/: cygwin.sh
test/x86/sse/: CMakeLists.txt
test/x86/sse/src/: test_sse.c
test/x86/sse2/: CMakeLists.txt
test/x86/sse2/src/: test_sse2.c
